Enhance: Destroy existing TempusDominus picker before creating a new one

--- a/League/Views/Shared/Components/TeamEditor/Default.cshtml
+++ b/League/Views/Shared/Components/TeamEditor/Default.cshtml
@@ -89,6 +89,6 @@ ViewContext.ViewData.TemplateInfo.HtmlFieldPrefix = Model.HtmlFieldPrefix;
 
     const tdFactory = new Site.TempusDominusFactory(locale, parentLocale, hourCycle, false);
     [].forEach.call(document.querySelectorAll('[data-input-type="time"]'), function (el) {
-        if (!el._tempusDominus) tdFactory.CreateTimePicker(el, '@(CultureInfo.CurrentCulture.DateTimeFormat.ShortTimePattern.Replace("tt", "T"))');
+        tdFactory.CreateTimePicker(el, '@(CultureInfo.CurrentCulture.DateTimeFormat.ShortTimePattern.Replace("tt", "T"))');
     });
 </script>
