--- a/League/Views/Team/_EditTeamModalPartial.cshtml
+++ b/League/Views/Team/_EditTeamModalPartial.cshtml
@@ -10,15 +10,15 @@
 <modal id="edit-team" title="@Localizer["Edit team"].Value" dialog-class="modal-xl" tabindex="-1">
     <modal-body>
         @* Form with only 1 input field can be submitted with enter key. So we have to prevent default submit behavior and trigger a click on saveBtn *@
-        <form asp-controller="@nameof(Team)" asp-action="@nameof(Team.Edit)" asp-route-tenant="@tenantUrlSegment" method="post" role="form" onsubmit="$('#@(League.TagHelpers.Modal.SiteAjaxSubmitTagHelper.TagHelperAttributeName)').trigger('click');return false;">
+        <form asp-controller="@nameof(Team)" asp-action="@nameof(Team.Edit)" asp-route-tenant="@tenantUrlSegment" method="post" role="form">
             <site-validation-summary show="All" warning="@Model.IsWarning" unique-error-text="true"></site-validation-summary>
             <input asp-for="Hash" type="hidden" />
             <input name="IsValid" type="hidden" value="@ViewData.ModelState.IsValid.ToString()" />
             @if (Model.IsWarning)
             {
                 <div class="row">
-                    <div class="mb-3 col-12 col-md-6">
-                        <div class="form-check border border-warning rounded py-2">
+                    <div class="col-12 col-md-6 border border-warning rounded ms-2 py-2 mb-3">
+                        <div class="form-check form-check-warning ms-1">
                             <input asp-for="OverrideWarnings" type="checkbox" class="form-check-input">
                             <label class="form-check-label text-warning ms-2 mt-0" asp-for="OverrideWarnings"></label>
                         </div>
