--- a/League/Views/Manage/_SetPasswordModalPartial.cshtml
+++ b/League/Views/Manage/_SetPasswordModalPartial.cshtml
@@ -13,7 +13,7 @@
 <!-- Modal -->
 <modal id="set-password" title="@ViewData["Title"]" tabindex="-1">
     <modal-body>
-        <form asp-controller="@nameof(Manage)" asp-action="@nameof(Manage.SetPassword)" asp-route-tenant="@tenantUrlSegment" method="post" role="form">
+        <form asp-controller="@nameof(Manage)" asp-action="@nameof(Manage.SetPassword)" asp-route-tenant="@tenantUrlSegment" method="post" role="form" novalidate>
             <input name="IsValid" type="hidden" value="@ViewData.ModelState.IsValid.ToString()" />
             <p class="text-info">
                 @Localizer["You do not have a local password for this site. Add a local password so you can sign in without an external login."]
