--- a/League/Views/Account/SignIn.cshtml
+++ b/League/Views/Account/SignIn.cshtml
@@ -19,7 +19,7 @@
     <hr/>
     <div class="col-md-8 col-sm-10 col-12 ps-0">
         <h3 class="h3">@Localizer["Sign-in using a social network account"]</h3>
-        <form asp-controller="@nameof(Account)" asp-action="@nameof(Account.ExternalSignIn)" asp-route-tenant="@tenantUrlSegment" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" role="form">
+            <form asp-controller="@nameof(Account)" asp-action="@nameof(Account.ExternalSignIn)" asp-route-tenant="@tenantUrlSegment" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" role="form" novalidate>
             @if (ViewData["Form"]?.ToString() == "SocialMedia")
             {
                 <site-validation-summary show="All">
@@ -38,7 +38,7 @@
     <hr />
     <div class="col-md-8 col-sm-10 col-12 ps-0">
         <h3 class="h3">@Localizer["Sign-in with your user account credentials"]</h3>
-        <form asp-controller="@nameof(Account)" asp-action="@nameof(Account.SignIn)" asp-route-tenant="@tenantUrlSegment" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" role="form" class="ps-0">
+    <form asp-controller="@nameof(Account)" asp-action="@nameof(Account.SignIn)" asp-route-tenant="@tenantUrlSegment" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" role="form" class="ps-0" novalidate>
             @if (ViewData["Form"]?.ToString() != "SocialMedia")
             {
                 <site-validation-summary show="All">
