--- a/League/Views/TeamApplication/EditTeam.cshtml
+++ b/League/Views/TeamApplication/EditTeam.cshtml
@@ -15,7 +15,7 @@
 <div class="mb-0 pb-1">
     <h2 class="h2">@ViewData["Title"]</h2>
     <hr class="mb-2" />
-    <form asp-controller="@nameof(TeamApplication)" asp-action="@nameof(TeamApplication.EditTeam)" asp-route-tenant="@tenantUrlSegment" method="post" role="form">
+    <form asp-controller="@nameof(TeamApplication)" asp-action="@nameof(TeamApplication.EditTeam)" asp-route-tenant="@tenantUrlSegment" method="post" role="form" novalidate>
         <site-validation-summary show="All" warning="@Model.IsWarning" unique-error-text="true"></site-validation-summary>
         <input asp-for="Hash" type="hidden" />
         <input name="IsValid" type="hidden" value="@ViewData.ModelState.IsValid.ToString()" />
