--- a/League/Views/TeamApplication/SelectVenue.cshtml
+++ b/League/Views/TeamApplication/SelectVenue.cshtml
@@ -17,7 +17,7 @@
     <h2 class="h2">@ViewData["Title"]</h2>
     <hr class="mb-3" />
     @(await Component.InvokeAsync<League.Components.VenueSelector>(componentModel))
-    <form asp-controller="@nameof(TeamApplication)" asp-action="@nameof(TeamApplication.SelectVenue)" asp-route-tenant="@tenantUrlSegment" method="post">
+    <form asp-controller="@nameof(TeamApplication)" asp-action="@nameof(TeamApplication.SelectVenue)" asp-route-tenant="@tenantUrlSegment" method="post" novalidate>
         <input asp-for="TeamId" type="hidden" />
         <input asp-for="VenueId" type="hidden" />
         <div class="row mt-3">
