--- a/League/Views/Shared/_GoogleAnalyticsScriptsPartial.cshtml
+++ b/League/Views/Shared/_GoogleAnalyticsScriptsPartial.cshtml
@@ -2,8 +2,7 @@
 @using League.ConfigurationPoco
 @inject IConfiguration Configuration
 @{
-    var googleConfig = new GoogleConfiguration();
-    Configuration.Bind("GoogleConfiguration", googleConfig);
+    var googleConfig = Configuration.Get<GoogleConfiguration>() ?? new GoogleConfiguration();
 }
 @*<!-- Global site tag (gtag.js) - Google Analytics -->*@
 <script async src="https://www.googletagmanager.com/gtag/js?id=@googleConfig.AnalyticsTrackingId"></script>
