Add ISiteContext.Position for sort order of tenant lists (e.g. in navigation)

--- a/League.Demo/Views/Home/Overview.cshtml
+++ b/League.Demo/Views/Home/Overview.cshtml
@@ -8,6 +8,7 @@
     ViewData.Description(Localizer["Leagues using volleyball-league.demo"].Value);
     var tenants = TenantStore.GetTenants().Values
         .Where(tc => !string.IsNullOrEmpty(tc.Identifier) && !tc.SiteContext.HideInMenu && !tc.IsDefault)
+        .OrderBy(tc => tc.SiteContext.Position)
         .ToList();
 }
 <div>
