--- a/League/Views/Shared/Components/MainNavigation/Default.cshtml
+++ b/League/Views/Shared/Components/MainNavigation/Default.cshtml
@@ -7,7 +7,7 @@
         // Node keys after "RightAlignSeparator" shall be aligned to the right margin of the navigation bar
         if (node.Key.Equals("RightAlignSeparator", StringComparison.InvariantCultureIgnoreCase))
         {
-            ViewData["dropdown-menu-end"] = " dropdown-menu-end"; // for dropdown in NavigationNodeChildDropdownPartial
+            ViewData["dropdown-menu-end"] = " dropdown-menu-end"; // for dropdown in NavigationNodeChildDropdownPartial: right align the dropdown menu
             <li class="ms-md-auto"></li>
         }
 
