--- a/League/Styles/site/site.scss
+++ b/League/Styles/site/site.scss
@@ -184,3 +184,7 @@ fieldset legend {
     max-width: $body-width - 2;
     margin: 2.5rem auto;
 }
+
+.text-muted { // Has been depreciated in Bootstrap 5.3.0, will be replaced by .text-body-secondary in v6
+    color: var(--bs-gray-600) !important;
+}
