Refactor scss files
* Fix: grunt-sass doesn't allow array for input scss files
* Add: custom_bootstrap.scss to build the custom bootstrap css
* Unify: use single quotes in scss files

--- a/League/Styles/bootstrap/_custom.scss
+++ b/League/Styles/bootstrap/_custom.scss
@@ -1,9 +1,9 @@
-// Bootstrap dependencies - javascript and fonts must be copied separately
-// font-awesome is included by site.scss
+// This is the import file for site scss files
+// which are using variables and Bootstrap functions / mixins
 
-@import "node_modules/bootstrap/scss/functions";
+@import 'node_modules/bootstrap/scss/functions';
 
 @import './custom_variables';
 
-@import "node_modules/bootstrap/scss/variables";
-@import "node_modules/bootstrap/scss/mixins";
+@import 'node_modules/bootstrap/scss/variables';
+@import 'node_modules/bootstrap/scss/mixins';
