--- a/League/Styles/bootstrap/_custom_variables.scss
+++ b/League/Styles/bootstrap/_custom_variables.scss
@@ -1,3 +1,6 @@
+// Required
+@import 'node_modules/bootstrap/scss/functions';
+
 // Bootstrap variable overrides
 
 //
@@ -28,7 +31,7 @@ $danger: #E401CD;
 $light: $gray-100;
 $dark: $gray-800;
 
-// Reassign color vars to semantic color scheme
+// Assign color vars to semantic color scheme
 $theme-colors: ( 'primary': $primary, 'secondary': $secondary, 'success': $success, 'info': $info, 'warning': $warning, 'danger': $danger, 'light': $light, 'dark': $dark);
 
 $table-bg: $light;
