--- a/League/Styles/site/site.scss
+++ b/League/Styles/site/site.scss
@@ -1,5 +1,5 @@
-@import '../bootstrap/custom';
-@import 'std-input';
+@import '../bootstrap/_custom';
+@import '_std-input';
 @import '../fontawesome/fontawesome.scss';
 
 $body-width: 60rem;
