--- a/League/Styles/site/_std-input.scss
+++ b/League/Styles/site/_std-input.scss
@@ -1,13 +1,11 @@
 // **************************************
 // Variables used locally
 // **************************************
-@import '../bootstrap/custom';
-
+@import '../bootstrap/_custom';
 
 // **************************************
 // Styles
 // **************************************
-
 
 /**************************************************************
 * START: css classes coming from jquery Unobtrousive Validation
