Update embedded resource in project file
* Add all files in wwwroot folder as embedded resoource
* Add *.tpl files in Templates\Email folder as embedded resource
* Append versions to stylesheet and script links

--- a/League.Demo/Views/Shared/_Layout.cshtml
+++ b/League.Demo/Views/Shared/_Layout.cshtml
@@ -17,8 +17,8 @@
         <meta name="description" content="@ViewData.Description()" />
     }
     <partial name="@League.Views.ViewNames.Shared._FavIcons" />
-    <link rel="stylesheet" href="~/lib/bootstrap/bootstrap.min.css"> @* embedded resource *@
-    <link rel="stylesheet" href="~/css/site.min.css" /> @* embedded resource *@
+    <link rel="stylesheet" href="~/lib/bootstrap/bootstrap.min.css" asp-append-version="true"> @* embedded resource *@
+    <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true"/> @* embedded resource *@
     <style type="text/css">
         .site-sticky-top {
             position: -webkit-sticky;
