--- a/League/Styles/bootstrap/_custom_variables.scss
+++ b/League/Styles/bootstrap/_custom_variables.scss
@@ -39,7 +39,7 @@ $table-bg: $light;
 // Body
 //
 // Settings for the `<body>` element.
-$body-bg: $white; /* $body-bg is used in many other components */
+$body-bg: $white; // $body-bg is used in many other components
 $body-color: $black;
 
 // Fonts
