Chore: Update razor view in League:Demo

--- a/League.Demo/Views/Home/Welcome.cshtml
+++ b/League.Demo/Views/Home/Welcome.cshtml
@@ -52,8 +52,9 @@
         </h4>
     </div>
 </div>
+@* Makes picture slide instead of immediate replacement *@
 @section styles {
     <style type="text/css">
-        .slide { }  @* Makes picture slide instead of immediate replacement*@
+        .slide { }
     </style>
 }
