Fix Site.ModalForm.js to work on Safari browsers
* Check the argument for the 'click' event for possible null
* Make sure the form is instanceof HTMLFormElement
* Add Polyfill for Element.closest (for browsers not supporting it)

--- a/League/Views/Team/MyTeam.cshtml
+++ b/League/Views/Team/MyTeam.cshtml
@@ -246,7 +246,7 @@
 {
     <link rel="stylesheet" href="~/lib/tempus-dominus/tempus-dominus.min.css" asp-append-version="true"/>
     <style type="text/css">
-        @* Team members *@
+        /* Team members */
 
         .fas.fa-chevron-left {
             transition: .3s transform ease-in-out;
@@ -264,7 +264,7 @@
             font-weight: bold;
         }
 
-        @* TeamVenueSelect *@
+        /* TeamVenueSelect */
 
         #venue-list tbody tr {
             border-bottom: solid 2px lightgray
